# chunkify

./: .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CODESTYLE.md  CODEx_START.md  CONTRIBUTING.md  MIGRATION_MAP.md  PERFORMANCE_MONITORING.md  PROJECT_BOOTSTRAP.md  README-old.ai  README.ai  README.md  README_meta.ai  README_refine.ai  _apply.sh  _e2e_check.sh  full_text.txt  mypy.ini  mypy_errors.txt  noxfile.py  output_chunks.json  pipeline.yaml  pipeline_rag.yaml  project_response.md  project_response_with_snippets.md  pyproject.toml  pytest.ini  requirements.txt  run_report.json
.coder/: main.tf
.github/workflows/: ci.yml
config/: test_environment.yaml
config/tags/: AGENTS.md  generate_tags.py  generic-orig.yaml  generic.yaml  generic_merged.yaml  generic_updated.yaml  merge_tags.py  (+17 more)
docs/: FOOTER_DETECTION_PLAN.md  MERGE_DECISIONS.md  RAG_OVERLAP_ALIGNMENT_PLAN.md  REFACTORING_ROADMAP.md  STRATEGIC_REFACTORING_PLAN.md  emit_jsonl_refactoring_assessment.md  footer_join_deferment_assessment.md  inline_style_schema.md  merge_strategy_design.md  overlap_baseline_metrics.json  semantic_fix_plan.md  task_stub_1_footer_suffix_diagnostics.md  test_stabilization_plan.md
pdf_chunker/: AGENTS.md  __init__.py  ai_enrichment.py  chunk_validation.py  cli.py  config.py  core.py  core_new.py  env_utils.py  epub_parsing.py  extraction_fallbacks.py  fallbacks.py  framework.py  geometry.py  heading_detection.py  inline_styles.py  interactive.py  language.py  learned_patterns.py  list_detection.py  page_artifacts.py  page_utils.py  parsing.py  patterns.py  pdf_blocks.py  pdf_parsing.py  pymupdf4llm_integration.py  source_matchers.py  splitter.py  text_cleaning.py  text_processing.py  utils.py
scripts/: AGENTS.md  benchmark_extraction.py  bisect_dups.py  chunk_pdf.py  compare_text_quality.py  detect_duplicates.py  diagnose_hyphens.py  epoche_platform_eng.py  eval_overlap.py  experiment_pymupdf4llm.py  find_glued_words.py  fix_newlines.py  fix_newlines_jsonl.py  generate_merge_docs.py  generate_test_epub.py  generate_test_pdf.py  llm_correction.py  page_boundary_tool.py  parity.py  refresh_goldens.py  replay_from_snapshot.py  test_page_boundaries.py  update_agents_md.py  validate_chunk_quality.py  validate_chunks.sh  validate_readme_functionality.py
test_data/: README.md  hyphenation.b64  ligature.b64  sample_chunks.jsonl  underscore.b64
tests/: AGENTS.md  KNOWN_ISSUES.md  ai_enrich_pass_test.py  ai_enrichment_test.py  artifact_block_test.py  bullet_fragment_join_test.py  bullet_list_test.py  bullet_strategy_integration_test.py  chunk_pdf_integration_test.py  chunk_validation_empty_test.py  confidence_patterns_test.py  config_warning_test.py  conftest.py  convert_returns_rows_test.py  core_helper_test.py  core_invariant_test.py  core_new_warnings_test.py  cross_page_sentence_test.py  deprecation_shim_test.py  determinism_test.py  dups_subset_test.py  emit_jsonl_coalesce_test.py  emit_jsonl_merge_test.py  emit_jsonl_meta_overflow_test.py  emit_jsonl_semantics_test.py  emit_jsonl_truncation_test.py  empty_bullet_line_test.py  empty_bullet_test.py  empty_chunk_validation_test.py  env_utils_test.py  epub_cli_regression_test.py  epub_footer_detection_test.py  epub_spine_test.py  extraction_fallback_pass_test.py  fallback_rejection_test.py  footer_artifact_test.py  footer_newline_regression_test.py  footer_strip_count_test.py  footer_table_cleanup_test.py  geometry_test.py  (+73 more)
(+87 files in other folders)
