[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "pdf-chunker"
version = "0.1.0"
description = "CLI pipeline to convert PDFs/EPUBs into JSONL for LoRA/RAG, with declarative passes."
authors = [{name = "Alex"}]
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
  "typer[all]>=0.12",
  "pydantic>=2.4",
  "PyYAML>=6.0",
  "structlog>=24.1",
  "funcy>=2.0",
  "pluggy>=1.5",
  "ftfy>=6.3.1",
  "langchain-text-splitters>=0.3.8",
  "wordfreq>=3.1.1",
  "haystack-ai>=2.15.1",
  "textstat>=0.7.7",
  "langdetect>=1.0.9",
  "PyMuPDF>=1.26.3",
  "python-dotenv>=1.1.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-regressions>=2.6",
  "hypothesis>=6.108",
  "ruff>=0.5.5",
  "black>=24.8.0",
  "mypy>=1.11.2",
  "nox>=2024.4.15",
  "types-PyYAML>=6.0.12",
]

[project.scripts]
pdf_chunker = "pdf_chunker.cli:app"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E","F","I","UP","B","SIM"]
ignore = ["E501"] # handled by Black
fix = true

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
pretty = true
show_error_codes = true
plugins = []

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.hatch.build.targets.wheel]
packages = ["pdf_chunker"]
